<resources>
    <string name="app_name">Brain Quiz</string>
    <string name="brain_ClipArt">brain_ClipArt</string>

    <!--Submit Button.-->
    <string name="Submit">Submit</string>

    <!--Quiz Questions-->
    <string name="How_many_pounds_did_Albert_Einstein_s_brain_weigh">How many pounds did Albert Einstein\'s brain weigh?</string>
    <string name="What_is_the_scientific_name_of_surgical_procedure_in_which_one_hemisphere_is_removed">What is the scientific name of surgical procedure in which one hemisphere is removed?</string>
    <string name="True_or_False_The_brain_can_t_actually_feel_pain_despite_its_bilions_of_neurons">True or False : The brain can\'t actually feel pain despite its bilions of neurons.</string>
    <string name="Male_brains_on_average_have_a_total_volume_that_is_between_larger_than_that_of_females">Male brains, on average, have a total volume that is between _____ larger than that of females.</string>
    <string name="True_or_False_All_brain_cells_are_not_alike">True or False : All brain cells are not alike.</string>
    <string name="What_is_the_scientific_name_for_brain_freeze">What is the scientific name for brain freeze?</string>
    <string name="Which_is_the_percentage_of_body_s_total_energy_and_oxygen_that_the_typical_brain_uses">Which is the percentage of body\'s total energy and oxygen that the typical brain uses?</string>
    <string name="How_long_can_the_brain_survive_without_oxygen">How long can the brain survive without oxygen?</string>
    <string name="How_well_do_you_know_the_human_brain_nLet_s_find_out">How well do you know the human brain? Let\'s find out!</string>


    <!--Quiz Answers.-->
    <string name="_15_minutes">15 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_50">50%</string>
    <string name="_20">20%</string>
    <string name="_15">15%</string>
    <string name="False">False</string>
    <string name="True">True</string>
    <string name="Sphenopalatine_Ganglioneuralgia">Sphenopalatine Ganglioneuralgia</string>
    <string name="Hemispherectomy">Hemispherectomy</string>
    <string name="_14_16">14 - 16%</string>
    <string name="_10_13">10 - 13%</string>
    <string name="_8_10">8 - 10%</string>
    <string name="Answer">Answer</string>
    <string name="_3_85_pounds">3,85 pounds</string>
    <string name="_3_05_pounds">3,05 pounds</string>
    <string name="_2_71_pounds">2,71 pounds</string>

    <!--Toast Messages.-->
    <string name="Your_score_is_">Your score is : </string>
    <string name="No_brain_found">No brain found!</string>
    <string name="Not_so_Good_">Not so Good!</string>
    <string name="Good_">Good!</string>
    <string name="Great_">Great!!!</string>
    <string name="Excellent_">Excellent!!!</string>
    <string name="Wow_You_are_a_genius_">WOW!You are a genius!!!</string>
    <string name="Congratulations_">Congratulation!!!</string>
</resources>
